# icfp-contest-2012

./: .gitignore  .gitmodules  LICENSE  Makefile  PACKAGES-TESTING  README  Types.hs  main.cpp  map.cpp  map.h  minebot.cabal  robot.cpp  robot.h  test.pl  testboard.hs  testvalidators.sh  validate.py  validate.sh  vvalidator.py
Board/: Class.hs  Map.hs
evolve/: Makefile  main.cpp  planet.cpp  planet.h  solution.cpp  solution.h  vm.cpp  vm.h
mb-validator/: Makefile  VM.hs  Validator.hs  libvm.c  libvm.h
src/: .gitignore  Lifter.hs  Makefile  Minebot.hs  README  Utils.hs  VM.hs  Validator.hs  libvm.c  libvm.h  my.c  randLifter.hs  vm.c
src/Minebot/: Solver.hs  Types.hs
tests/: beard-task.map  map11.map  map12.map  map13.map  map14.map  map15.map  map16.map  map17.map  map18.map  map19.map  map20.map  map21.map  map42.map  map45.map  map47.map  map49.map  mycontest1.map  vmtest-W.map  vmtest.map  vmtest2-R.map  vmtest2.map
tools/cpp-validator/: Makefile  README  main.cpp  map.cpp  map.h
tools/gui-validator/: README  README.md  board.rb  game.rb  utils.rb  validator.rb
tools/hs-validator/: .gitignore  Makefile  README  VM.hs  Validator.hs  libvm.c  libvm.h  main.c
tools/jmi-lifter/: Makefile  main.c
tools/lifter-tester/: lifter-tester.py
tools/python-validator/: validate.py
tools/ranking/: Gemfile  autowiki.sh  icfp2012.rb  ranking.rb
tools/unittest-poller/: answer.py  maps  poller.sh
tools/validator-validator/: Makefile  README  lambdamine  validator  vvalidator.py
unittests/: maketest.sh  runtests.sh  test.lib
unittests/tests/beard1/: case0.in  (+238 more)
(+6356 files in other folders)
